--- a/front/index.html
+++ b/front/index.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
+    <h1 id="titulo"><span id="sublinhadas">Proje</span>tos</h1>
     <div id="projetos">
-        <h1>Projetos</h1>
         <div id="projeto1" class="caixa">
-            <img src="" alt="">
-            Teste1
+            <div id="img">
+                <img src="Arrecadações.jpeg" alt="" id="imgensProjeto" id="img">
+            </div>
+            <div id="texto">
+                <h1>
+                    Arrecadações
+                </h1>
+                <p>Lorem ipsum dolor sit amet piditate ipsa tenetur,
+                    <br> totam minus corrupti mollitia molestiae!
+                </p>
+            </div>
         </div>
-        <div id="projeto2"class="caixa">
-            <img src="" alt="">
-            Teste2
+        <div id="projeto2" class="caixa">
+            <div id="img">
+                <img src="SopãoSolidario.jpeg" alt="" id="imgensProjeto">
+            </div>
+            <div id="texto">
+                <h1>
+                    Sopão solidário
+                </h1>
+                <p>Lorem ipsum dolor sit amet piditate ipsa tenetur,
+                    <br> totam minus corrupti mollitia molestiae!
+                </p>
+            </div>
         </div>
-        <div id="projeto3"class="caixa">
-            <img src="" alt="">
-            Teste3
+        <div id="projeto3" class="caixa">
+            <div id="img">
+                <img src="PalhaçoTerapia.jpeg" alt="" id="imgensProjeto">
+            </div>
+            <div id="texto">
+                <h1>
+                    Palhaçoterapia
+                </h1>
+                <p>Lorem ipsum dolor sit amet piditate ipsa tenetur,
+                    <br> totam minus corrupti mollitia molestiae!
+                </p>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
